ffmpeg: fix plain -profile support

Fixes Ticket387

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>